# ai-self-driving-drug-lab

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  render.yaml  requirements.txt
docs/: HANDOFF.md  (+1 more)
framework/: .gitignore  README.md  pyproject.toml
framework/docs/: EXTENDING.md
framework/examples/: __init__.py
framework/examples/coating_line/: __init__.py  benchmark_example.py  run_example.py  spec.py
framework/examples/drug_lab/: __init__.py  common.py  executor.py  feedback.py  planner.py  run_example.py
framework/pip-wheel-metadata/autoquant-0.1.0.dist-info/: METADATA  entry_points.txt  top_level.txt
framework/src/autoquant/: __init__.py  registry.py  smoke.py
framework/src/autoquant/benchmarking/: __init__.py  runner.py
framework/src/autoquant/core/: __init__.py  campaigns.py  evaluation.py  specs.py  types.py
framework/src/autoquant/examples/: __init__.py
framework/src/autoquant/executors/: __init__.py  base.py  noop.py
framework/src/autoquant/feedback/: __init__.py  base.py  synthetic.py
framework/src/autoquant/modeling/: __init__.py  base.py  memory.py
framework/src/autoquant/orchestration/: __init__.py  base.py  sequential.py
framework/src/autoquant/planners/: __init__.py  adaptive.py  base.py  baybe.py  random.py
framework/src/autoquant/scenarios/: __init__.py  coating_line.json  drug_lab.json  loader.py
framework/tests/: test_adaptive_planner.py  test_baybe_planner.py  test_benchmark_runner.py  test_coating_line_example.py  test_drug_lab_example.py  test_scenarios_and_registry.py
(+36 files in other folders)
